--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ master ]
+    branches: [ main, master ]
 
 jobs:
   lint-and-test:
@@ -22,33 +22,8 @@ jobs:
       - name: Lint (flake8)
         run: |
           pip install flake8
-          flake8 --max-line-length=120 || true
+          flake8 --max-line-length=120
       - name: Run smoke tests
         run: |
           pip install pytest
-          pytest -q || true
-name: CI
-
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run tests
-        run: |
-          # Placeholder: add unit tests here
-          echo "No tests configured yet"
+          pytest -q
